--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'GB'
 - !lcsh 'Geography -- Early works to 1800'
+- GITenberg
 title: A Briefe Introduction to Geography
 url: http://www.gutenberg.org/ebooks/14999
